<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    tools:context="com.dorvis.quizapp.AndroidActivity">

    <RelativeLayout
        android:id="@+id/raltive1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/faq_back_android"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_arrow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/android"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="0dp"
            android:layout_weight="0.04" >
            <RadioButton
                android:id="@+id/radio0"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobuttona" />
            <RadioButton
                android:id="@+id/radio1"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobuttonb" />
            <RadioButton
                android:id="@+id/radio2"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobuttonc" />
        </RadioGroup>


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:text="@string/str_next" />
    </LinearLayout>

</RelativeLayout>
