<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:orientation="vertical"
    tools:context="com.dorvis.quizapp.activities.AboutUsActivity">

    <RelativeLayout
        android:id="@+id/raltive1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/faq_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_arrow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_developer"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        >
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgProfileDeveloper"
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/sainath_hiwale"
                android:src="@drawable/sainath"/>
            <TextView
                android:id="@+id/txtViewName"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sainath_hiwale"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:text="@string/app_version"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:backgroundTintMode="screen"
        android:padding="16dp"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtviewDescribe"
        android:textSize="16sp"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        android:text="@string/description_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@color/colorWhite"
        />
    <TextView
        android:id="@+id/txtViewContact"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        android:layout_gravity="center"
        />


</LinearLayout>


