<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dorvis.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:padding="5dp"
        >

        <ImageView
            android:id="@+id/dq_imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="false"
            android:background="@drawable/circle"
            android:contentDescription="@string/daily_quiz"
            android:padding="10dp"
            android:paddingTop="13dp"
            app:srcCompat="@drawable/ic_event_dailyquiz_black_24dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="64dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/dq_imageView"
            android:layout_alignStart="@+id/dq_imageView"
            android:layout_alignTop="@+id/textView4"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/daily_quiz"
            android:textSize="10sp" />

        <ImageView
            android:id="@+id/interview_img"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/dq_imageView"
            android:layout_toRightOf="@+id/dq_imageView"
            android:background="@drawable/circle"
            android:contentDescription="@string/interview"
            android:paddingTop="13dp"
            app:srcCompat="@drawable/ic_interview_black_24dp" />

        <TextView
            android:layout_width="64dp"
            android:layout_height="20dp"
            android:padding="2dp"
            android:text="@string/interview"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_alignLeft="@+id/interview_img"
            android:layout_alignStart="@+id/interview_img"
            android:layout_below="@+id/interview_img" />

        <ImageView
            android:id="@+id/technews_img"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/interview_img"
            android:layout_toRightOf="@+id/interview_img"
            android:background="@drawable/circle"
            android:contentDescription="@string/tech_news"
            android:paddingTop="12dp"
            app:srcCompat="@drawable/ic_tv_black_24dp" />

        <TextView
            android:layout_width="64dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/technews_img"
            android:layout_alignStart="@+id/technews_img"
            android:layout_below="@+id/technews_img"
            android:text="@string/tech_news"
            android:padding="2dp"
            android:textSize="10sp"
            android:gravity="center"
            android:id="@+id/textView3" />

        <ImageView
            android:id="@+id/notification_img"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/technews_img"
            android:layout_toRightOf="@+id/technews_img"
            android:background="@drawable/circle"
            android:contentDescription="@string/notification"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            app:srcCompat="@drawable/ic_notifications_active_black_24dp" />

        <TextView
            android:layout_width="64dp"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:gravity="center"
            android:padding="2dp"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/notification_img"
            android:layout_alignStart="@+id/notification_img"
            android:text="@string/notification"
            android:id="@+id/textView4" />

    </RelativeLayout>

</FrameLayout>
