<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dorvis.quizapp.fragments.ToDoInterviewFragment">

        <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:visibility="visible" android:focusable="true">

            <ImageView
                android:id="@+id/fresher_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:clickable="true"
                android:contentDescription="@string/freshers"
                android:padding="12dp"
                android:src="@drawable/interview" android:focusable="true" />


            <Button
                android:id="@+id/fresher_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:layout_gravity="center_vertical|center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:text="@string/freshers"
                android:textSize="12sp" android:layout_marginStart="50dp" />

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:visibility="visible" android:focusable="true">

        <ImageView
            android:id="@+id/Experience_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:contentDescription="@string/experience"
            android:padding="12dp"
            android:src="@drawable/interview" android:focusable="true"/>


        <Button
            android:id="@+id/experience_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:text="@string/experience"
            android:textSize="12sp" android:layout_marginStart="50dp"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:visibility="visible" android:focusable="true">

        <ImageView
            android:id="@+id/technical_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:contentDescription="@string/technical"
            android:padding="12dp"
            android:src="@drawable/interview" android:focusable="true"/>


        <Button
            android:id="@+id/technical_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:text="@string/technical"
            android:textSize="12sp" android:layout_marginStart="50dp"/>

    </android.support.v7.widget.CardView>


</LinearLayout>
